RESOLVED FIXED145529
WAKScrollView.h cannot be imported standalone
https://bugs.webkit.org/show_bug.cgi?id=145529
Summary WAKScrollView.h cannot be imported standalone
Anders Carlsson
Reported 2015-06-01 15:21:56 PDT
WAKScrollView.h cannot be imported standalone
Attachments
Patch (11.71 KB, patch)
2015-06-01 15:25 PDT, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2015-06-01 15:25:47 PDT
WebKit Commit Bot
Comment 2 2015-06-01 15:28:51 PDT
Attachment 254017 [details] did not pass style-queue: ERROR: Source/WebCore/platform/ScrollTypes.h:53: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] ERROR: Source/WebCore/platform/ScrollTypes.h:65: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] ERROR: Source/WebCore/platform/ScrollTypes.h:77: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] ERROR: Source/WebCore/platform/ScrollTypes.h:89: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 4 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2015-06-01 15:44:06 PDT
Note You need to log in before you can comment on or make changes to this bug.