WAKScrollView.h cannot be imported standalone https://bugs.webkit.org/show_bug.cgi?id=145529

Reviewed by Dan Bernstein.

Source/WebCore:

* page/mac/WebCoreFrameView.h:
Remove the __cplusplus #ifdefs since WebCoreFrameView.h is only used by Objective-C++ code.
(The different non-C++ method declarations were wrong anyway!)

* platform/ScrollTypes.h:
Remove the #ifdef __cplusplus surrounding the code, add header includes to make the file self-contained,
and reformat the enum definitions.

Source/WebKit/mac:

Don't migrate WAKScrollView.h, it's not used outside of WebKit.

* MigrateHeaders.make:

Canonical link: https://commits.webkit.org/163567@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185080 268f45cc-cd09-0410-ab3c-d52691b4dbfc