Source/WebCore/platform/ScrollTypes.h
@@ -26,167 +26,167 @@
 #ifndef ScrollTypes_h
 #define ScrollTypes_h
 
-#ifdef __cplusplus
+#include <cstdint>
+#include <wtf/Assertions.h>
 
 namespace WebCore {
 
-    enum ScrollDirection : uint8_t {
-        ScrollUp,
-        ScrollDown,
-        ScrollLeft,
-        ScrollRight
-    };
+enum ScrollDirection : uint8_t {
+    ScrollUp,
+    ScrollDown,
+    ScrollLeft,
+    ScrollRight
+};
 
-    enum ScrollLogicalDirection : uint8_t {
-        ScrollBlockDirectionBackward,
-        ScrollBlockDirectionForward,
-        ScrollInlineDirectionBackward,
-        ScrollInlineDirectionForward
-    };
-    
-    
-    inline ScrollDirection logicalToPhysical(ScrollLogicalDirection direction, bool isVertical, bool isFlipped) 
-    {
-        switch (direction) {
-        case ScrollBlockDirectionBackward: {
-            if (isVertical) {
-                if (!isFlipped)
-                    return ScrollUp;
-                return ScrollDown;
-            } else {
-                if (!isFlipped)
-                    return ScrollLeft;
-                return ScrollRight;
-            }
-            break;
-        }
-        case ScrollBlockDirectionForward: {
-            if (isVertical) {
-                if (!isFlipped)
-                    return ScrollDown;
+enum ScrollLogicalDirection : uint8_t {
+    ScrollBlockDirectionBackward,
+    ScrollBlockDirectionForward,
+    ScrollInlineDirectionBackward,
+    ScrollInlineDirectionForward
+};
+
+
+inline ScrollDirection logicalToPhysical(ScrollLogicalDirection direction, bool isVertical, bool isFlipped)
+{
+    switch (direction) {
+    case ScrollBlockDirectionBackward: {
+        if (isVertical) {
+            if (!isFlipped)
                 return ScrollUp;
-            } else {
-                if (!isFlipped)
-                    return ScrollRight;
+            return ScrollDown;
+        } else {
+            if (!isFlipped)
                 return ScrollLeft;
-            }
-            break;
+            return ScrollRight;
         }
-        case ScrollInlineDirectionBackward: {
-            if (isVertical) {
-                if (!isFlipped)
-                    return ScrollLeft;
-                return ScrollRight;
-            } else {
-                if (!isFlipped)
-                    return ScrollUp;
-                return ScrollDown;
-            }
-            break;
-        }
-        case ScrollInlineDirectionForward: {
-            if (isVertical) {
-                if (!isFlipped)
-                    return ScrollRight;
-                return ScrollLeft;
-            } else {
-                if (!isFlipped)
-                    return ScrollDown;
-                return ScrollUp;
-            }
-            break;
-        }
-        default:
-            ASSERT_NOT_REACHED();
-            break;
-        }
-        return ScrollUp;
+        break;
     }
-
-    enum ScrollGranularity : uint8_t {
-        ScrollByLine,
-        ScrollByPage,
-        ScrollByDocument,
-        ScrollByPixel,
-        ScrollByPrecisePixel
-    };
-
-    enum ScrollElasticity {
-        ScrollElasticityAutomatic,
-        ScrollElasticityNone,
-        ScrollElasticityAllowed
-    };
-
-    enum ScrollbarOrientation { HorizontalScrollbar, VerticalScrollbar };
-
-    enum ScrollbarMode { ScrollbarAuto, ScrollbarAlwaysOff, ScrollbarAlwaysOn };
-
-    enum ScrollbarControlSize { RegularScrollbar, SmallScrollbar };
-
-    enum class ScrollEventAxis { Horizontal, Vertical };
-
-    typedef unsigned ScrollbarControlState;
-
-    enum ScrollbarControlStateMask {
-        ActiveScrollbarState = 1,
-        EnabledScrollbarState = 1 << 1,
-        PressedScrollbarState = 1 << 2
-    };
-
-    enum ScrollbarPart {
-        NoPart = 0,
-        BackButtonStartPart = 1,
-        ForwardButtonStartPart = 1 << 1,
-        BackTrackPart = 1 << 2,
-        ThumbPart = 1 << 3,
-        ForwardTrackPart = 1 << 4,
-        BackButtonEndPart = 1 << 5,
-        ForwardButtonEndPart = 1 << 6,
-        ScrollbarBGPart = 1 << 7,
-        TrackBGPart = 1 << 8,
-        AllParts = 0xffffffff
-    };
-
-    enum ScrollbarButtonsPlacement {
-        ScrollbarButtonsNone,
-        ScrollbarButtonsSingle,
-        ScrollbarButtonsDoubleStart,
-        ScrollbarButtonsDoubleEnd,
-        ScrollbarButtonsDoubleBoth
-    };
-
-    enum class ScrollbarStyle {
-        AlwaysVisible,
-        Overlay
-    };
-    
-    enum ScrollbarOverlayStyle {
-        ScrollbarOverlayStyleDefault,
-        ScrollbarOverlayStyleDark,
-        ScrollbarOverlayStyleLight
-    };
-
-    enum ScrollbarOverlayState {
-        ScrollbarOverlayStateHidden,
-        ScrollbarOverlayStateThumbShown,
-        ScrollbarOverlayStateAllShown,
-        ScrollbarOverlayStatePulseThumb
-    };
-
-    typedef unsigned ScrollbarControlPartMask;
-
-    enum ScrollPinningBehavior {
-        DoNotPin,
-        PinToTop,
-        PinToBottom
-    };
-
-    enum ScrollBehaviorForFixedElements {
-        StickToDocumentBounds,
-        StickToViewportBounds
-    };
+    case ScrollBlockDirectionForward: {
+        if (isVertical) {
+            if (!isFlipped)
+                return ScrollDown;
+            return ScrollUp;
+        } else {
+            if (!isFlipped)
+                return ScrollRight;
+            return ScrollLeft;
+        }
+        break;
+    }
+    case ScrollInlineDirectionBackward: {
+        if (isVertical) {
+            if (!isFlipped)
+                return ScrollLeft;
+            return ScrollRight;
+        } else {
+            if (!isFlipped)
+                return ScrollUp;
+            return ScrollDown;
+        }
+        break;
+    }
+    case ScrollInlineDirectionForward: {
+        if (isVertical) {
+            if (!isFlipped)
+                return ScrollRight;
+            return ScrollLeft;
+        } else {
+            if (!isFlipped)
+                return ScrollDown;
+            return ScrollUp;
+        }
+        break;
+    }
+    default:
+        ASSERT_NOT_REACHED();
+        break;
+    }
+    return ScrollUp;
 }
 
-#endif // __cplusplus
+enum ScrollGranularity : uint8_t {
+    ScrollByLine,
+    ScrollByPage,
+    ScrollByDocument,
+    ScrollByPixel,
+    ScrollByPrecisePixel
+};
+
+enum ScrollElasticity {
+    ScrollElasticityAutomatic,
+    ScrollElasticityNone,
+    ScrollElasticityAllowed
+};
+
+enum ScrollbarOrientation { HorizontalScrollbar, VerticalScrollbar };
+
+enum ScrollbarMode { ScrollbarAuto, ScrollbarAlwaysOff, ScrollbarAlwaysOn };
+
+enum ScrollbarControlSize { RegularScrollbar, SmallScrollbar };
+
+enum class ScrollEventAxis { Horizontal, Vertical };
+
+typedef unsigned ScrollbarControlState;
+
+enum ScrollbarControlStateMask {
+    ActiveScrollbarState = 1,
+    EnabledScrollbarState = 1 << 1,
+    PressedScrollbarState = 1 << 2
+};
+
+enum ScrollbarPart {
+    NoPart = 0,
+    BackButtonStartPart = 1,
+    ForwardButtonStartPart = 1 << 1,
+    BackTrackPart = 1 << 2,
+    ThumbPart = 1 << 3,
+    ForwardTrackPart = 1 << 4,
+    BackButtonEndPart = 1 << 5,
+    ForwardButtonEndPart = 1 << 6,
+    ScrollbarBGPart = 1 << 7,
+    TrackBGPart = 1 << 8,
+    AllParts = 0xffffffff
+};
+
+enum ScrollbarButtonsPlacement {
+    ScrollbarButtonsNone,
+    ScrollbarButtonsSingle,
+    ScrollbarButtonsDoubleStart,
+    ScrollbarButtonsDoubleEnd,
+    ScrollbarButtonsDoubleBoth
+};
+
+enum class ScrollbarStyle {
+    AlwaysVisible,
+    Overlay
+};
+
+enum ScrollbarOverlayStyle {
+    ScrollbarOverlayStyleDefault,
+    ScrollbarOverlayStyleDark,
+    ScrollbarOverlayStyleLight
+};
+
+enum ScrollbarOverlayState {
+    ScrollbarOverlayStateHidden,
+    ScrollbarOverlayStateThumbShown,
+    ScrollbarOverlayStateAllShown,
+    ScrollbarOverlayStatePulseThumb
+};
+
+typedef unsigned ScrollbarControlPartMask;
+
+enum ScrollPinningBehavior {
+    DoNotPin,
+    PinToTop,
+    PinToBottom
+};
+
+enum ScrollBehaviorForFixedElements {
+    StickToDocumentBounds,
+    StickToViewportBounds
+};
+
+}
 
 #endif
